--- a/nginx/logstash.conf
+++ b/nginx/logstash.conf
@@ -1,14 +1,19 @@
 input {
     file {
-        path => "/var/log/nginx/wechat.99cj.com.cn.log"
+        path => "/var/log/nginx/test.talk.99cj.com.cn.log"
         path => "/var/log/nginx/admin.99cj.com.cn.log"
         codec => "json"
     }
 }
 output {
-   elasticsearch {
-       index => "logstash-%{+YYYY.MM.dd}"
-       hosts => ["192.168.159.188:9200"]
- }
+#   elasticsearch {
+#       index => "logstash-%{+YYYY.MM.dd}"
+#       hosts => ["192.168.159.188:9200"]
+# }
+stdout {
+        codec => rubydebug
+        #workers => 2
+    }
+
 }
 
