--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -24,7 +24,7 @@ ENV CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
 RUN cd /tmp && wget http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm && rpm -ivh nginx-release-centos-7-0.el7.ngx.noarch.rpm  && yum -y install nginx
 
 #install logstash
-RUN cd /usr/local && wget https://artifacts.elastic.co/downloads/logstash/logstash-6.1.1.tar.gz && cd /usr/local && tar -xvf logstash-6.1.1.tar.gz && mv logstash-6.1.1 logstash 
+#RUN cd /usr/local && wget https://artifacts.elastic.co/downloads/logstash/logstash-6.1.1.tar.gz && cd /usr/local && tar -xvf logstash-6.1.1.tar.gz && mv logstash-6.1.1 logstash 
 
 #add logstash.conf
 ADD nginx/logstash.conf /usr/local/myconf/logstash.conf
@@ -33,7 +33,7 @@ ADD nginx/nginx.conf /usr/local/myconf/nginx.conf
 ADD nginx/fastcgi_params /usr/local/myconf/fastcgi_params
 #add start script
 ADD nginx/start.sh /tmp/start.sh
-
+RUN chmod  777 /tmp/start.sh
 #add extend  port
 EXPOSE 80 8081 443
 
@@ -41,7 +41,8 @@ EXPOSE 80 8081 443
 #RUN nginx -c /usr/local/myconf/nginx.conf
 #RUN nohup /usr/local/logstash/bin/logstash -f /usr/local/myconf/logstash.conf &
 
-CMD ["/bin/sh","/tmp/start.sh"]
+#CMD ["/bin/sh","/tmp/start.sh"]
+ENTRYPOINT ["nginx","-c","/usr/local/myconf/nginx.conf"]
 
 #start container: docker 
 ##docker run --name nginx -v <config_path>:/usr/local/myconf/ --link php5.6:php5.6 -d <image_name>
