--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,7 +64,7 @@ http {
 
     location ~ \.php$ {
         root           /www/talk/public/wechat/;
-        fastcgi_pass   php5.6:9000;
+        fastcgi_pass   10.100.10.1:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /www/talk/public/wechat/$fastcgi_script_name;
         include        fastcgi_params;
@@ -94,7 +94,7 @@ server{
 
     location ~ \.php$ {
         root /www/talk/public/admin/;
-        fastcgi_pass php5.6:9000;
+        fastcgi_pass 10.100.10.1:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME  /www/talk/public/admin/$fastcgi_script_name;
         include fastcgi_params;
