--- a/php5.6/Dockerfile
+++ b/php5.6/Dockerfile
@@ -3,21 +3,22 @@ MAINTAINER lishide <376189717@qq.com>
 
 ENV TZ "Asia/Shanghai"
 #env install
-RUN rpm -Uvh https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-RUN yum install -y php php-opcache php-pecl-apcu php-devel php-mbstring php-mcrypt php-mysqlnd php-phpunit-PHPUnit php-pecl-xdebug php-pecl-xhprof php-pdo php-pear php-fpm php-cli php-xml php-bcmath php-process php-gd php-common php-mongodb php-redis
+RUN yum -y install epel-release
+RUN rpm -ivh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
+RUN yum -y install --enablerepo=remi --enablerepo=remi-php56 php php-opcache php-devel php-mbstring php-mcrypt php-mysqlnd php-phpunit-PHPUnit php-pecl-xdebug php-pecl-xhprof php-redis php-mongodb php-fpm
 
-#make dir
-RUN mkdir -p /usr/local/php/etc/php-fpm.d/  && mkdir -p /var/log/php-fpm/ && mkdir -p /var/run/php-fpm/  && mkdir -p /usr/local/myconf/php-fpm.d/
-
+RUN mkdir /www
+RUN yum install nfs-utils -y 
 #ADD php confile
-ADD php5.6/php-fpm.conf /usr/local/myconf/php-fpm.conf
-ADD php5.6/php.ini /usr/local/myconf/php.ini
-ADD php5.6/php-fpm.d/www.conf /usr/local/myconf/php-fpm.d/www.conf
-
+#ADD php5.6/php-fpm.conf /usr/local/myconf/php-fpm.conf
+#ADD php5.6/php.ini /usr/local/myconf/php.ini
+ADD php5.6/php-fpm.d/www.conf /etc/php-fpm.d/www.conf
 
 EXPOSE 9000
 
 #start container
 #docker run --name php5.6  -v /www:/www -v /usr/local/lnmp/docker-file/php5.6:/usr/local/myconf -d php5.6/php5.6
 
-ENTRYPOINT ["php-fpm", "-F","-c","/usr/local/myconf/php.ini", "-y","/usr/local/myconf/php-fpm.conf"]
+ENTRYPOINT ["php-fpm", "-F"]
+#ENTRYPOINT ["php-fpm"]
+
