--- a/php5.6/php-fpm.d/www.conf
+++ b/php5.6/php-fpm.d/www.conf
@@ -4,25 +4,27 @@
 user = apache
 group = apache
 
-listen = 9000
+listen = 127.0.0.1:9000
 
 
 
 
+listen.allowed_clients = 127.0.0.1
 
 
 pm = dynamic
 
-pm.max_children = 50
+pm.max_children = 500
 
 pm.start_servers = 5
 
 pm.min_spare_servers = 5
 
-pm.max_spare_servers = 35
+pm.max_spare_servers = 500
  
 
 
+pm.status_path = /phpfpm_status
  
 
  
@@ -30,6 +32,7 @@ pm.max_spare_servers = 35
 
 slowlog = /var/log/php-fpm/www-slow.log
 
+request_slowlog_timeout = 3s
 
  
  
@@ -49,3 +52,4 @@ php_admin_flag[log_errors] = on
 php_value[session.save_handler] = files
 php_value[session.save_path]    = /var/lib/php/session
 php_value[soap.wsdl_cache_dir]  = /var/lib/php/wsdlcache
+
